feat: Complete UI redesign and rebrand to PromptCraft AI
Major Changes:
• Rebrand from 'XML Prompter' to 'PromptCraft AI' reflecting universal AI capabilities
• Streamline UI by reducing visual clutter and excessive info boxes
• Implement consistent blue-purple gradient color scheme
• Simplify ModelSelector by removing overwhelming capability matrices
• Optimize EnhancedPromptPreview with cleaner two-tab system
• Redesign Header with professional, clean appearance
• Update PromptGenerator hero section with simplified status indicators

Technical Improvements:
• Reduce ModelSelector component complexity by 50%
• Streamline component logic and state management
• Improve performance by removing unnecessary animations
• Enhance maintainability with consistent design patterns

User Experience:
• Reduce cognitive load with cleaner information hierarchy
• Improve professional appearance suitable for enterprise use
• Maintain all core functionality while simplifying interface
• Create intuitive user flow from configuration to results

Documentation:
• Add comprehensive UI_REDESIGN.md explaining changes and rationale
• Update package.json with new project name and description
• Preserve existing functionality while improving usability

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>XML Prompter - Claude Sonnet Prompt Generator</title>
+    <title>PromptCraft AI - Universal AI Prompt Optimizer</title>
+    <meta name="description" content="Create optimized prompts for any AI model with intelligent format adaptation. From Claude to GPT, Gemini to Llama - professional prompt engineering made simple." />
   </head>
   <body>
     <div id="root"></div>
