refactor: rename project from XMLPrompter/PromptCraft AI to Promptr throughout codebase

--- a/public/auth-test.html
+++ b/public/auth-test.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XMLPrompter Auth Test</title>
+    <title>Promptr Auth Test</title>
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <style>
         body {
@@ -72,7 +72,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🔐 XMLPrompter Authentication Test</h1>
+        <h1>🔐 Promptr Authentication Test</h1>
         <p>This page tests the Supabase authentication directly in the browser.</p>
         
         <div class="form-group">
