--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PromptCraft AI - Universal AI Prompt Optimizer</title>
+    <title>Promptr - Universal AI Prompt Optimizer</title>
     <meta name="description" content="Create optimized prompts for any AI model with intelligent format adaptation. From Claude to GPT, Gemini to Llama - professional prompt engineering made simple." />
   </head>
   <body>
