feat: improve UI components and add logo assets
- Update AuthModal with better styling and UX
- Enhance Footer component design
- Improve Header navigation and user menu
- Refine RoleSelector with better visual feedback
- Enhance ProgressiveContextWizard user experience
- Update RotatingPromptExamples with smoother animations
- Add Promptr logo assets (PNG variants)
- Update HTML title and favicon
- Improve Tailwind config for better styling

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logos/PromptrLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Promptr - Universal AI Prompt Optimizer</title>
     <meta name="description" content="Create optimized prompts for any AI model with intelligent format adaptation. From Claude to GPT, Gemini to Llama - professional prompt engineering made simple." />
